--- a/index.html
+++ b/index.html
@@ -13,9 +13,98 @@
 
 <body>
     <!-- haeder start -->
-    <header>
+    <header class="container">
         <!-- navbar start -->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+                <a class="navbar-brand fs-3 fw-semibold" href="#">Pro Edu</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-5">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Deals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Success</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Register</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <!-- navbar end -->
+
+        <!-- slider start -->
+        <div id="carouselExampleCaptions" class="carousel slide my-5" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                        <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
+                            readable content of a
+                            page when looking at its layout.</p>
+                        <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                        <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
+                            readable content of
+                            a
+                            page when looking at its layout.</p>
+                        <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption">
+                        <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                        <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
+                            readable content of
+                            a
+                            page when looking at its layout.</p>
+                        <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <!-- slider end -->
     </header>
     <!-- haeder end -->
 
