--- a/index.html
+++ b/index.html
@@ -50,63 +50,170 @@
         <!-- navbar end -->
 
         <!-- slider start -->
-        <div id="carouselExampleCaptions" class="carousel slide my-5" data-bs-ride="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide my-5" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                            <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
+                                readable content of a
+                                page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                            <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
+                                readable content of
+                                a
+                                page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                            <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
+                                readable content of
+                                a
+                                page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
-                        <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
-                            readable content of a
-                            page when looking at its layout.</p>
-                        <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
-                        <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
-                            readable content of
-                            a
-                            page when looking at its layout.</p>
-                        <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
-                        <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
-                            readable content of
-                            a
-                            page when looking at its layout.</p>
-                        <button type="button" class="btn btn-primary fw-semibold">Get Started</button>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+        </section>
         <!-- slider end -->
     </header>
     <!-- haeder end -->
+
+    <!-- main start -->
+    <main>
+        <!-- Popular Courses section start  -->
+        <section>
+            <h2 class="fs-1 text-center pt-5 pb-1">Discover Our Popular <br> Courses</h2>
+            <p class="text-center fw-lighter pb-4">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page when
+                looking at its layout.</p>
+            <div class="container">
+                <div class="row g-3">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="border rounded d-flex">
+                            <div>
+                                <img src="images/course/course-1.png" alt="">
+                            </div>
+                            <div class="ms-3 mt-2">
+                                <h3 class="fs-3 fw-semibold">Fundamental Of UI/UX Design</h3>
+                                <p class="fw-lighter">Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="border rounded d-flex">
+                            <div>
+                                <img src="images/course/course-2.png" alt="">
+                            </div>
+                            <div class="ms-3 mt-2">
+                                <h3 class="fs-3 fw-semibold">Javascript Basic to advanced</h3>
+                                <p class="fw-lighter">Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="border rounded d-flex">
+                            <div>
+                                <img src="images/course/course-3.png" alt="">
+                            </div>
+                            <div class="ms-3 mt-2">
+                                <h3 class="fs-3 fw-semibold">Fullstack Web Development</h3>
+                                <p class="fw-lighter">Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="border rounded d-flex">
+                            <div>
+                                <img src="images/course/course-4.png" alt="">
+                            </div>
+                            <div class="ms-3 mt-2">
+                                <h3 class="fs-3 fw-semibold">Digital Marketing</h3>
+                                <p class="fw-lighter">Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="border rounded d-flex">
+                            <div>
+                                <img src="images/course/course-5.png" alt="">
+                            </div>
+                            <div class="ms-3 mt-2">
+                                <h3 class="fs-3 fw-semibold">Photography Basic Rules</h3>
+                                <p class="fw-lighter">Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <div class="border rounded d-flex">
+                            <div>
+                                <img src="images/course/course-6.png" alt="">
+                            </div>
+                            <div class="ms-3 mt-2">
+                                <h3 class="fs-3 fw-semibold">Motion Graphics</h3>
+                                <p class="fw-lighter">Some quick example text to build on the card title and make up the
+                                    bulk of the card.
+                                </p>
+                                <h5 class="text-primary">Price : 20$</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center align-items-center mt-5">
+                <button type="button" class="btn btn-primary px-5 py-2 fs-5 fw-semibold">View All</button>
+            </div>
+        </section>
+        <!-- Popular Courses section end  -->
+    </main>
+    <!-- main end -->
 
     <!-- bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
