explore learning section addde

--- a/index.html
+++ b/index.html
@@ -212,6 +212,58 @@
             </div>
         </section>
         <!-- Popular Courses section end  -->
+
+        <!-- Explore The elearning Institute start -->
+        <section class="container">
+            <h2 class="fs-1 text-center pt-5 pb-1">Discover Our Popular <br> Courses</h2>
+            <p class="text-center fw-lighter pb-4">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page when
+                looking at its layout.</p>
+            <div class="card mb-3">
+                <div class="row g-0 bg-info">
+                    <div class="col-lg-5 col-md-6">
+                        <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <div class="card-body">
+                            <h5 class="card-title fs-2 fw-semibold">Explore The elearning Institute</h5>
+                            <p class="card-text fw-lighter">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the
+                                majority have suffered alteration in some form, by injected humour, or randomised words
+                                which don't look even slightly believable. If you are going to use a passage of Lorem
+                                Ipsum, you need to be sure.
+                                <br>
+                                Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on
+                                the Internet tend to repeat predefined.
+                            </p>
+                            <div class="d-flex">
+                                <div>
+                                    <h4>3.2K+</h4>
+                                    <p class="fw-lighter">Online Course</p>
+                                </div>
+                                <div class="ms-3">
+                                    <h4>600+</h4>
+                                    <p class="fw-lighter">Expert member</p>
+                                </div>
+                                <div class="ms-3">
+                                    <h4>1k+</h4>
+                                    <p class="fw-lighter">Rating & Review</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ms-3">
+                            <button type="button" class="btn btn-primary px-4 py-1 fs-6 fw-semibold">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Explore The elearning Institute end -->
+
+        <!-- Ready to join section start -->
+        <!-- Ready to join section end -->
     </main>
     <!-- main end -->
 
