student section added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- css added -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/0b97ef5b7c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -52,7 +54,7 @@
         <!-- navbar end -->
 
         <!-- slider start -->
-        <section>
+        <section class="my-5">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -130,12 +132,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title fs-4">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text fw-lighter">Some quick example text to build on the card
+                                            title and make
+                                            up the bulk of the card.</p>
+                                        <p class="card-text fs-5 text-primary fw-semibold">Price : 20$</p>
                                     </div>
                                 </div>
                             </div>
@@ -145,17 +146,16 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start w-100"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title fs-4">Javascript Basic to advanced</h5>
+                                        <p class="card-text fw-lighter">Some quick example text to build on the card
+                                            title and make
+                                            up the bulk of the card.</p>
+                                        <p class="card-text fs-5 text-primary fw-semibold">Price : 20$</p>
                                     </div>
                                 </div>
                             </div>
@@ -165,17 +165,16 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start w-100"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title fs-4">Fullstack Web Development</h5>
+                                        <p class="card-text fw-lighter">Some quick example text to build on the card
+                                            title and make
+                                            up the bulk of the card.</p>
+                                        <p class="card-text fs-5 text-primary fw-semibold">Price : 20$</p>
                                     </div>
                                 </div>
                             </div>
@@ -187,17 +186,16 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start w-100"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title fs-4">Digital Marketing</h5>
+                                        <p class="card-text fw-lighter">Some quick example text to build on the card
+                                            title and make
+                                            up the bulk of the card.</p>
+                                        <p class="card-text fs-5 text-primary fw-semibold">Price : 20$</p>
                                     </div>
                                 </div>
                             </div>
@@ -207,17 +205,16 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                    <img src="images/course/course-5.png" class="img-fluid rounded-start w-100"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title fs-4">Photography Basic Rules</h5>
+                                        <p class="card-text fw-lighter">Some quick example text to build on the card
+                                            title and make
+                                            up the bulk of the card.</p>
+                                        <p class="card-text fs-5 text-primary fw-semibold">Price : 20$</p>
                                     </div>
                                 </div>
                             </div>
@@ -227,17 +224,16 @@
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid rounded-start w-100"
+                                    <img src="images/course/course-6.png" class="img-fluid rounded-start w-100"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
+                                        <h5 class="card-title fs-4">Motion Graphics</h5>
+                                        <p class="card-text fw-lighter">Some quick example text to build on the card
+                                            title and make
+                                            up the bulk of the card.</p>
+                                        <p class="card-text fs-5 text-primary fw-semibold">Price : 20$</p>
                                     </div>
                                 </div>
                             </div>
@@ -366,7 +362,135 @@
         <!-- Successfull Students section end -->
 
         <!-- Some Students Feedback start -->
-
+        <section class="my-5">
+            <h2 class="text-center">Some Students Feedback</h2>
+            <p class="text-center">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page
+                when
+                looking at its layout.</p>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-lg-5 border border-1 rounded m-2 p-3">
+                                <div class="d-flex justify-content-between">
+                                    <img src="images/comma.png" class="d-block" alt="...">
+                                    <div class="star-icon">
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="fw-lighter">There are many variations of passages of Lorem Ipsum available,
+                                    but the
+                                    majority have
+                                    suffered alteration in some form, by injected humour, or randomised words which
+                                    don't look
+                                    even slightly believable. If you are going to use a passage of Lorem.</p>
+                                <div class="d-flex">
+                                    <div><img src="images/student/student-5.png" alt=""></div>
+                                    <div class="ps-2">
+                                        <p class="m-0 fw-semibold">Awlad Hossain</p>
+                                        <p class="m-0 fw-light">UI Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 border border-1 rounded m-2 p-3">
+                                <div class="d-flex justify-content-between">
+                                    <img src="images/comma.png" class="d-block" alt="...">
+                                    <div class="star-icon">
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="fw-lighter">There are many variations of passages of Lorem Ipsum available,
+                                    but the
+                                    majority have
+                                    suffered alteration in some form, by injected humour, or randomised words which
+                                    don't look
+                                    even slightly believable. If you are going to use a passage of Lorem.</p>
+                                <div class="d-flex">
+                                    <div><img src="images/student/student-6.png" alt=""></div>
+                                    <div class="ps-2">
+                                        <p class="m-0 fw-semibold">Shanta Akter</p>
+                                        <p class="m-0 fw-light">Graphic Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-lg-5 border border-1 rounded m-2 p-3">
+                                <div class="d-flex justify-content-between">
+                                    <img src="images/comma.png" class="d-block" alt="...">
+                                    <div class="star-icon">
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="fw-lighter">There are many variations of passages of Lorem Ipsum available,
+                                    but the
+                                    majority have
+                                    suffered alteration in some form, by injected humour, or randomised words which
+                                    don't look
+                                    even slightly believable. If you are going to use a passage of Lorem.</p>
+                                <div class="d-flex">
+                                    <div><img src="images/student/student-5.png" alt=""></div>
+                                    <div class="ps-2">
+                                        <p class="m-0 fw-semibold">Awlad Hossain</p>
+                                        <p class="m-0 fw-light">UI Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5 border border-1 rounded m-2 p-3">
+                                <div class="d-flex justify-content-between">
+                                    <img src="images/comma.png" class="d-block" alt="...">
+                                    <div class="star-icon">
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star bg-warning rounded-circle"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="fw-lighter">There are many variations of passages of Lorem Ipsum available,
+                                    but the
+                                    majority have
+                                    suffered alteration in some form, by injected humour, or randomised words which
+                                    don't look
+                                    even slightly believable. If you are going to use a passage of Lorem.</p>
+                                <div class="d-flex">
+                                    <div><img src="images/student/student-6.png" alt=""></div>
+                                    <div class="ps-2">
+                                        <p class="m-0 fw-semibold">Shanta Akter</p>
+                                        <p class="m-0 fw-light">Graphic Designer</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev bg-primary rounded-circle" type="button"
+                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next bg-primary rounded-circle" type="button"
+                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
         <!-- Some Students Feedback end -->
     </main>
     <!-- main end -->
