--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
         <!-- Successfull Students section start -->
         <section class="container">
             <h2 class="fs-2 fw-bolder">Meet Our Successfull Students</h2>
-            <p class="fw-lighter">It is a long established fact that a reader will be distracted by the readable content
+            <p class="fw-lighter">It is a long established fact that a reader will be distracted by the <br> readable
+                content
                 of a page when
                 looking at its layout.</p>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 g-4">
@@ -363,8 +364,9 @@
 
         <!-- Some Students Feedback start -->
         <section class="my-5">
-            <h2 class="text-center">Some Students Feedback</h2>
-            <p class="text-center">It is a long established fact that a reader will be distracted by the readable <br>
+            <h2 class="text-center fs-2 fw-bolder">Some Students Feedback</h2>
+            <p class="text-center fw-lighter">It is a long established fact that a reader will be distracted by the
+                readable <br>
                 content of a page
                 when
                 looking at its layout.</p>
@@ -492,6 +494,86 @@
             </div>
         </section>
         <!-- Some Students Feedback end -->
+
+        <!-- Frequently Asked Questions start -->
+        <section class="mt-5">
+            <h2 class="fs-2 fw-bold text-center">Frequently Asked Questions</h2>
+            <p class="fw-lighter text-center">It is a long established fact that a reader will be distracted by the
+                readable <br>
+                content of a page
+                when looking at its layout.</p>
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            What are the difference between flexbox and grid?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            <strong>Grid and flexbox</strong>.The basic difference between CSS Grid Layout and CSS
+                            Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a
+                            column. Grid was designed for two-dimensional layout - rows, and columns at the same time.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            What are the difference between bootstrap and tailwind?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a
+                            definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+                            flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that
+                            makes them look identical.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What is css box model?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            The CSS box model is essentially a box that wraps around every HTML element. It consists of:
+                            margins, borders, padding, and the actual content.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What a semantic tag?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            The HTML semantics refers to the tags that provide meaning to an HTML page rather than just
+                            presentation. It makes HTML more comprehensible by better defining the different sections
+                            and layout of web pages.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Frequently Asked Questions end -->
     </main>
     <!-- main end -->
 
