--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 content
                 of a page when
                 looking at its layout.</p>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                 <div class="col">
                     <div class="card h-100">
                         <img src="images/student/student-1.png" class="card-img-top" alt="...">
@@ -574,6 +574,44 @@
             </div>
         </section>
         <!-- Frequently Asked Questions end -->
+
+        <!-- companies section start -->
+        <section class="mt-5 d-none d-sm-none d-md-block d-md-none d-lg-block">
+            <h2 class="fs-2 fw-bold text-center mb-4">Trusted by over 800+ companies</h2>
+            <div class="row row-cols-1 row-cols-lg-6">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/company/company-1.png" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/company/company-2.png" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/company/company-3.png" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/company/company-4.png" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/company/company-5.png" class="card-img-top" alt="...">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/company/company-6.png" class="card-img-top" alt="...">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- companies section end -->
     </main>
     <!-- main end -->
 
