--- a/index.html
+++ b/index.html
@@ -615,6 +615,25 @@
     </main>
     <!-- main end -->
 
+    <!-- footer start  -->
+    <footer class="mt-5">
+        <div class="bg-dark d-flex justify-content-center align-items-center py-5">
+            <div>
+                <h2 class="fs-2 fw-bold text-white">Pro Edu</h2>
+                <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, <br>
+                    Sultanate of Oman</p>
+                <p class="text-white">Privacy Ploicy | Terms of use</p>
+                <div class="social-icon text-white">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer end -->
+
     <!-- bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
