--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
-                            <h5 class="fs-1 fw-bold">Get Started Digital Learning</h5>
+                            <h5 class="fs-1 fw-bold learning-title">Get Started Digital Learning</h5>
                             <p class="fw-lighter">It is a long established fact that a reader will be distracted by the
                                 readable content of
                                 a page when looking at its layout.</p>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <div class="card mb-3" style="max-width: 540px;">
+                        <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-3.png" class="img-fluid rounded-start w-100"
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="d-flex justify-content-center">
-                        <div class="card mb-3" style="max-width: 540px;">
+                        <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-4.png" class="img-fluid rounded-start w-100"
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <div class="card mb-3" style="max-width: 540px;">
+                        <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-5.png" class="img-fluid rounded-start w-100"
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <div class="card mb-3" style="max-width: 540px;">
+                        <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-6.png" class="img-fluid rounded-start w-100"
@@ -255,7 +255,7 @@
                     <div class="col-lg-6 col-md-6 p-3 bg-light">
                         <img src="images/working.png" class="img-fluid rounded-start w-100" alt="...">
                     </div>
-                    <div class="col-lg-6 col-md-6 bg-info p-3">
+                    <div class="col-lg-6 col-md-6 bg-info p-3 d-flex align-items-center">
                         <div class="card-body">
                             <h5 class="card-title fs-2 fw-semibold">Explore The elearning Institute</h5>
                             <p class="card-text fw-lighter">There are many variations of passages of Lorem Ipsum
@@ -282,10 +282,12 @@
                                     <p class="fw-lighter">Rating & Review</p>
                                 </div>
                             </div>
+                            <div class="ms-3">
+                                <button type="button" class="btn btn-primary px-4 py-1 fs-6 fw-semibold">Read
+                                    More</button>
+                            </div>
                         </div>
-                        <div class="ms-3">
-                            <button type="button" class="btn btn-primary px-4 py-1 fs-6 fw-semibold">Read More</button>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -295,16 +297,43 @@
         <!-- Ready to join section start -->
         <section class="container my-5">
             <div class="card w-100 row bg-primary">
-                <div class="card-body d-flex">
-                    <div class="col-lg-5 col-md-6">
+                <div class="card-body d-lg-flex justify-content-between align-items-center py-5">
+                    <div class="">
                         <h5 class="card-title fs-2 text-white">Ready to join?</h5>
                         <p class="card-text text-white fw-lighter">It is a long established fact that a reader will be
                             distracted by
                             the readable
                             content of a page when looking at its layout.</p>
                     </div>
-                    <div class="col-lg-5 col-md-6"><a href="#" class="btn btn-light text-primary fw-semibold">Register
-                            Now</a></div>
+                    <div class="">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn bg-white text-primary fw-semibold" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">
+                            Register Now
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -373,8 +402,8 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col-lg-5 border border-1 rounded m-2 p-3">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-lg-5 border border-1 rounded m-2 p-3 ">
                                 <div class="d-flex justify-content-between">
                                     <img src="images/comma.png" class="d-block" alt="...">
                                     <div class="star-icon">
