--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row">
+                        <div class="row d-flex justify-content-center">
                             <div class="col-lg-5 border border-1 rounded m-2 p-3">
                                 <div class="d-flex justify-content-between">
                                     <img src="images/comma.png" class="d-block" alt="...">
